# terrafirmacraft_alloys

./: .clang-format  Alloys.qml  CMakeLists.txt  LICENSE  Materials.qml  View.qml  resources.qrc
data/: alloys.json  materials.json
src/: Alloy.hpp  Alloys.cpp  Alloys.hpp  Calculator.cpp  Calculator.hpp  MainWindow.cpp  MainWindow.hpp  Material.hpp  Materials.cpp  Materials.hpp  SortingDisabler.hpp  external.hpp  main.cpp
ui/: main_window.ui
